# cdist-cg

./: .gitignore  AUTHORS  Makefile.am  configure.ac
src/: banner.c  config.c  config.h  info.c  inventory.c  main.c
src/commands/: banner.c  inventory.c
src/util/: string.h
